# callcomapi

./: Cargo.toml  README.md
.github/workflows/: publish-on-tag.yml
callcomapi_macros/: Cargo.toml  README.md
callcomapi_macros/examples/: com_thread.rs  with_com.rs
callcomapi_macros/src/: com_thread.rs  with_com.rs
callcomapi_macros/tests/: common.rs  compile_time_assertions.rs  sync_async_interop.rs  with_com.rs
callcomapi_runtime/: Cargo.toml  README.md
callcomapi_runtime/src/: lib.rs
crates/callcomapi/: Cargo.toml  README.md
crates/callcomapi/examples/: performance_comparison.rs  with_com.rs
crates/callcomapi/src/: lib.rs
crates/callcomapi_macros/: Cargo.toml  README.md
crates/callcomapi_macros/examples/: com_thread.rs
crates/callcomapi_macros/src/: com_thread.rs  lib.rs  with_com.rs
crates/callcomapi_macros/tests/: com_thread.rs  frequent_calls.rs  sync_async_interop.rs
crates/callcomapi_runtime/: Cargo.toml  README.md
crates/callcomapi_runtime/src/: lib.rs
crates/sample_user_app/: Cargo.toml
crates/sample_user_app/src/: main.rs
