[package]
name = "callcomapi_runtime"
version = "0.1.3"
edition = "2024"
description = "Runtime support for callcomapi_macros"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fangfuzha/callcomapi"
documentation = "https://docs.rs/callcomapi_runtime"

[dependencies]
futures = "0.3"
windows = { version = "0.62", features = ["Win32_System_Com"] }
