[package]
name = "sample_user_app"
version = "0.1.3"
edition = "2024"
publish = false

[dependencies]
callcomapi = { path = "../callcomapi" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
windows = { version = "0.62", features = [
  "Win32_System_Com",
  "Win32_System_Wmi",
  "Win32_Foundation",
] }
anyhow = "1"
